objects/AdditionalCaseTypeLinking__c.object
<CustomObject>
    <description>SFDC1-6246 Used in Additional Case Fields object process to identify the record type of additional case fields</description>
    <fields>
        <fullName>AdditionalCaseRecordType__c</fullName>
        <description>SFDC1-6376: Adding Polk in the pick list
SFDC-2646: Added AgriBussiness
SFDC-2757: Added Energy-Piper, Energy-WellTest, Energy-Harmony</description>
        <label>Additional Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Receivable</fullName>
                </value>
                <value>
                    <fullName>Agent Validation Service</fullName>
                </value>
                <value>
                    <fullName>AgriBusiness</fullName>
                </value>
                <value>
                    <fullName>Cappitech Regulatory Reporting</fullName>
                </value>
                <value>
                    <fullName>CDN Data</fullName>
                </value>
                <value>
                    <fullName>Corporate Actions</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Dividend Forecasting</fullName>
                </value>
                <value>
                    <fullName>Enerdeq</fullName>
                </value>
                <value>
                    <fullName>Energy-ETA</fullName>
                </value>
                <value>
                    <fullName>Energy-Harmony</fullName>
                </value>
                <value>
                    <fullName>Energy-Natural</fullName>
                </value>
                <value>
                    <fullName>Energy-Piper</fullName>
                </value>
                <value>
                    <fullName>Energy-WellTest</fullName>
                </value>
                <value>
                    <fullName>Equities-Data and Analytics</fullName>
                </value>
                <value>
                    <fullName>Equities-Reg</fullName>
                </value>
                <value>
                    <fullName>FieldDirect</fullName>
                </value>
                <value>
                    <fullName>Goldfire</fullName>
                </value>
                <value>
                    <fullName>IPREO Core</fullName>
                </value>
                <value>
                    <fullName>Kingdom</fullName>
                </value>
                <value>
                    <fullName>Legacy Distribution</fullName>
                </value>
                <value>
                    <fullName>Loan Settlement</fullName>
                </value>
                <value>
                    <fullName>MI Customer Support</fullName>
                </value>
                <value>
                    <fullName>NRG</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Order Management Helpdesk</fullName>
                </value>
                <value>
                    <fullName>OTC DD</fullName>
                </value>
                <value>
                    <fullName>OTC Services</fullName>
                </value>
                <value>
                    <fullName>PETRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <description>SFDC1-6246 Case Record Type for additional Case Fields object process. SFDC1-7120: Removing Internal Partner pick list. SFDC1-9290 Adding Implementation Value</description>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Order Management/Delivery Help Desk</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Internal Partner</fullName>
                    <isActive>false</isActive>
                    <label>Internal Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDAdditionalCaseTypeLinking__c</fullName>
        <description>SFDC1-2445: Creating PK field for Data Migration Support</description>
        <displayFormat>ACTL-{000000}</displayFormat>
        <label>PKID AdditionalCaseTypeLinking</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6246: Additional case fields record should get spawned based on Product Family record</description>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Additional Case Type Linkings</relationshipLabel>
        <relationshipName>AdditionalCaseTypeLinkings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6246: Additional case fields record should get spawned based on Product Group record</description>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Additional Case Type Linkings</relationshipLabel>
        <relationshipName>AdditionalCaseTypeLinkings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Case Type Linking</label>
    <nameField>
        <displayFormat>ACTL-{0000}</displayFormat>
        <label>Additional Case Type Linking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Case Type Linkings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>